--- a/src/kernel/CMakeLists.txt
+++ b/src/kernel/CMakeLists.txt
@@ -7,7 +7,8 @@ add_custom_command(OUTPUT boot.o multiboot.o
 add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/dist/kernel.bin
     DEPENDS boot.o
     COMMAND ld -n --oformat elf64-little -o ${CMAKE_CURRENT_BINARY_DIR}/kernel.bin -T ${PROJECT_SOURCE_DIR}/linker.ld  boot.o multiboot.o
-    COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/kernel.bin ${CMAKE_SOURCE_DIR}/dist/kernel.bin)
+    COMMAND cp ${CMAKE_CURRENT_BINARY_DIR}/kernel.bin ${CMAKE_SOURCE_DIR}/dist/kernel.bin
+    )
 
 add_custom_target(kernel 
     DEPENDS ${CMAKE_SOURCE_DIR}/dist/kernel.bin
