--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,10 +8,14 @@ add_executable(kernel
     kernel/multiboot.c
     kernel/boot.asm
     kernel/boot64.asm
+    kernel/console.c
+    kernel/ports.c
+    kernel/keyboard.c
+    kernel/print.c
     kernel/main.c
     )
 
-#target_compile_options(kernel PUBLIC -static -nodefaultlibs -nostartfiles)
+#target_compile_options(kernel PUBLIC -fno-stack-protector)
 target_link_options(kernel PUBLIC -static -nodefaultlibs -nostartfiles -T ${CMAKE_SOURCE_DIR}/src/linker.ld)
 
 add_custom_command(TARGET kernel 
